[metadata]
name = utils
version = 0.9.0
description = utilities
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = tkosht
author_email = takehito.oshita.business@gmail.com
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    omegaconf >= 2.3.0
    ulid-py >= 1.1.0

